Modified the API path and Response
